# mpc-toolkit

./: .bazelrc  .clang-format  .gitignore  README.md  WORKSPACE  go.mod
bazel/: BUILD.bazel  fmtlib.BUILD  mpct.bzl  repositories.bzl  spdlog.BUILD  zlib.BUILD
mpct/: BUILD.bazel  client.cpp  server.cpp
mpct/common/: BUILD.bazel  executor.hpp  task.hpp
mpct/network/: BUILD.bazel  party.cpp  party.hpp
src/: BUILD.bazel  client.cpp  echo.proto  main.cc  server.cpp
utils/: block.go  block_test.go
